Changes from Lessor to Lessee and Lessee to Lessor
(Crear lessees y lessors se puede, pero spaces no)
